# cat_games_launcher

./: Cargo.toml  LICENSE  README.md
src/: main.rs  options.json
src/libs/: cli.rs  desktop.rs  dialogos.rs  extractor.rs  imagen.rs  importer.rs  installer.rs  lutris.rs  mod.rs  utils.rs  vars.rs
src/utils/: config.rs  game.rs
src/window/: add.rs  config.rs  games.rs  import.rs  mod.rs  panel.rs
