[package]
name = "cat_games_launcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
dirs = "6.0.0"
eframe = "0.33.3"
egui = "0.33.3"
egui_extras = { version = "0.33.3", features = ["all_loaders"] }
ico = "0.5.0"
image = "0.25.10"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
tar = "0.4.45"
ureq = "3.3.0"
zip = "7.2.0"
